widened the div on the contact page to avoid wrapping the text

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ footer h4 {
     display:inline-block;
 }
 .location_panel {
-    width: 600px;
+    width: 700px;
 }
 .location_panel img {
     float: right;
